# kotlin-python-grpc-twin-app

./: README.md  pom.xml  pyproject.toml
src/main/kotlin/com/tboptimus/kotlinflasktwins/: KotlinFlaskTwinsApplication.kt
src/main/resources/: application.yaml
src/test/kotlin/com/tboptimus/kotlinflasktwins/: KotlinFlaskTwinsApplicationTests.kt
