[tool.poetry]
name = "kotlin-python-grpc-twin-app"
version = "0.1.0"
description = "Flask server with grpc endpoint"
authors = ["Taras Bulubas <tbulubas@gmail.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
